# loopgain-bench

./: .gitignore  BENCH_PROTOCOL.md  LESSONS.md  LICENSE  Makefile  README.md  RESULTS.md  prices.json  pyproject.toml
analysis/: __init__.py  charts.py  run.py
bench/: __init__.py  judge.py  llm.py  pricing.py  runner.py  upload_to_dashboard.py  workload.py
bench/workloads/: __init__.py  w1_codegen_claude_agent_sdk.py  w1_codegen_langgraph.py  w2_debate_autogen.py  w2_debate_crewai.py  w3_planner_langgraph.py  w3_planner_openai_agents.py  w4_rag_langchain.py  w5_adversarial.py  w5_adversarial_crewai.py  w5_adversarial_langgraph.py
bench/workloads/_shared/: __init__.py  bfcl_tasks.py  codegen_base.py  codegen_problems.py  debate_base.py  debate_topics.py  framework_invoke.py  planner_base.py  (+3 more)
data/raw/: judge-w1-codegen-claude-agent-sdk-claude-haiku-4-5-registered.jsonl  judge-w1-codegen-langgraph-claude-haiku-4-5-registered.jsonl  judge-w2-debate-autogen-gpt-4-1-mini-registered.jsonl  judge-w2-debate-crewai-gpt-4-1-mini-registered.jsonl  judge-w3-planner-langgraph-claude-sonnet-4-6-registered.jsonl  judge-w3-planner-openai-agents-gpt-4-1-mini-registered.jsonl  judge-w5-adversarial-claude-haiku-4-5-registered.jsonl  judge-w5-adversarial-crewai-claude-haiku-4-5-registered.jsonl  judge-w5-adversarial-langgraph-claude-haiku-4-5-registered.jsonl  w1-codegen-claude-agent-sdk-claude-haiku-4-5-registered.jsonl  w1-codegen-langgraph-claude-haiku-4-5-registered.jsonl  w2-debate-autogen-gpt-4-1-mini-registered.jsonl  w2-debate-crewai-gpt-4-1-mini-registered.jsonl  w3-planner-langgraph-claude-sonnet-4-6-registered.jsonl  w3-planner-openai-agents-gpt-4-1-mini-registered.jsonl  w4-rag-langchain-claude-haiku-4-5-registered.jsonl  w5-adversarial-claude-haiku-4-5-registered.jsonl  w5-adversarial-crewai-claude-haiku-4-5-registered.jsonl  w5-adversarial-langgraph-claude-haiku-4-5-registered.jsonl
data/results/: adapter_parity.json  aggregate.json  by_band.json  false_stops.csv  hero_story.json  judge.json  lead_time.csv
tests/: test_adapter_parity.py  test_mock_harness.py
